--- a/src/components/molecules/buttons/arrow/style.css
+++ b/src/components/molecules/buttons/arrow/style.css
@@ -1,6 +1,8 @@
 .root {
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
+  background-color: #444;
+  border-radius: 50%;
   outline: none;
 }
 
@@ -10,13 +12,19 @@
   transition: 0.3s;
 }
 
-.left {
+.root > button {
+  width: 40px;
+  height: 40px;
+  transform: translate(25%, 25%);
+}
+
+.left > button {
   /* stylelint-disable-next-line */
   background: no-repeat center
     url("../../../../assets/images/icon-16-arrow-left.svg");
 }
 
-.right {
+.right > button {
   /* stylelint-disable-next-line */
   background: no-repeat center
     url("../../../../assets/images/icon-16-arrow-right.svg");
