--- a/src/components/molecules/description/style.css
+++ b/src/components/molecules/description/style.css
@@ -1,5 +1,6 @@
 .root {
-  width: 50%;
+  width: 100%;
+  height: 100%;
   padding: 12px;
   background-color: #eee;
   border-radius: 8px;
@@ -27,9 +28,33 @@
 }
 
 .description {
+  position: relative;
+  height: 150px;
   padding-top: 12px;
+  overflow-y: scroll;
 }
 
 .description > * {
   font-family: "NotoSansRegular", sans-serif;
+}
+
+.link {
+  position: absolute;
+  left: 50%;
+  width: 100px;
+  font-size: 18px;
+  color: #2facff;
+  text-decoration: underline;
+  transform: translateX(-50%);
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
