--- a/src/components/utils/carousel/style.css
+++ b/src/components/utils/carousel/style.css
@@ -6,7 +6,9 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: calc(100% - 64px);
   overflow: hidden;
+  background-color: rgba(216, 235, 252, 0.7);
 }
 
 .root > span {
@@ -14,6 +16,8 @@
 }
 
 .items {
+  width: 80%;
+  height: 600px;
   margin: 0 auto;
   white-space: nowrap;
 }
@@ -45,4 +49,22 @@
   width: 100%;
   height: 100%;
   border: none;
+}
+
+.description {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  z-index: 2;
+  width: 500px;
+  height: 300px;
+  transform: translate(-50%, -50%);
+}
+
+.notFound {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  background-color: rgba(216, 235, 252, 0.7);
 }
